[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/GrabberSheet1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/smokeSheet.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Curve" id=6]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 6 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.984496 )
colors = PoolColorArray( 0.4, 0.454902, 0.498039, 1, 0.4, 0.454902, 0.498039, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 0, 6, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 2.5, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 38.4264, 36.1223 )
script = ExtResource( 2 )
rotationalDrag = 0.06
forwardThrustSpeed = 5.0
rotationalThrustSpeed = 0.7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
vframes = 2

[node name="ForwardSmoke" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( -20, 0 )
amount = 25
lifetime = 4.0
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="LeftSmoke" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 7, 5 )
amount = 15
lifetime = 4.0
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="RightSmoke" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 7, -5 )
amount = 15
lifetime = 4.0
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 3 )
